grafana.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
          - containerPort: 3000
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"  # 0.1 CPU
          limits:
            memory: "200Mi"
            cpu: "250m"  # 0.25 CPU
        volumeMounts:
          - name: grafana-storage
            mountPath: /var/lib/grafana  # Montage du PVC ici
      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-pvc
