meteo.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: meteo-deployment
  labels:
    app: meteo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meteo
  template:
    metadata:
      labels:
        app: meteo
    spec:
      containers:
      - name: meteo
        image: pockost/telegraf-cf-weather:arm
        ports:
          - containerPort: 8125
        resources:
          requests:
            memory: "10Mi"
            cpu: "50m"  # 0.05 CPU
          limits:
            memory: "20Mi"
            cpu: "100m"  # 0.1 CPU
