influxdb-service.yml
---

apiVersion: v1
kind: Service
metadata:
  name: influxdb-service
spec:
  selector:
    app: influxdb
  ports:
    - protocol: TCP
      port: 8086  
      targetPort: 8086  
  clusterIP: None
