influxdb-ingress.yml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb-ingress
spec:
  rules:
  - host: influxdb.192.168.49.2.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: influxdb-service
            port:
              number: 8086
